# libinferbit

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
include/: inferbit.h
src/: calibrate.c  config.c  config_json.c  convert.c  convert_gguf.c  error.c  eval.c  forward.c  generate.c  gguf.c  ibf_loader.c  inferbit_internal.h  kv_cache.c  model.c  platform.h  pq_decode.c  pq_decode.h  pq_kmeans.c  pq_kmeans.h  prefix_cache.c  quantize.c  safetensors.c  safetensors_multi.c  simd.c  speculative.c  tensor_source.c  threading.c  version.c
src/kernels/: avx2.c  neon.c  scalar.c  sparse.c  ternary.c
tests/: bench_pq_bounded.c  bench_pq_decode.c  bench_pq_dejavu.c  bench_pq_ffn.c  bench_pq_model_mlp.c  bench_pq_pathd.c  bench_pq_q8lut.c  bench_pq_real_model.c  bench_pq_streaming.c  test_basic.c  test_convert.c  test_forward.c  test_ibf_loader.c  test_pq_decode.c
